# HW_8_WEB

./: pyproject.toml
task_1/: models.py  queries.py  seed.py
task_2/: connect.py  consumer_email.py  consumer_sms.py  producer.py
