[tool.poetry]
name = "HW_8_WEB"
version = "0.1.0"
description = ""
authors = ["SaitovMykyta <rassskoll@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
pymongo = {extras = ["srv", "tls"], version = "^4.7.3"}
redis = "^5.0.6"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^25.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
